--- a/Organic_Launch/Organic_Launch/Views/Shared/_Layout.cshtml
+++ b/Organic_Launch/Organic_Launch/Views/Shared/_Layout.cshtml
@@ -17,10 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Organic Launch", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Log In</a></li>
+                    <li><a href="#">Register</a></li>
                 </ul>
             </div>
         </div>
@@ -30,6 +33,14 @@
         @RenderBody()
         <hr />
         <footer>
+            <div class="logo">
+                @Html.ActionLink("Organic Launch", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            </div>
+            <ul>
+                <li><a href="#">Terms and Condition</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Privacy</a></li>
+            </ul>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
