--- a/Organic_Launch/Organic_Launch/Views/Home/Register.cshtml
+++ b/Organic_Launch/Organic_Launch/Views/Home/Register.cshtml
@@ -62,6 +62,7 @@
                     <input type="submit" value="Create" class="btn btn-default" />
                 </div>
             </div>
+            @Html.Raw(ViewBag.FakeConfirmation)
         </div>
     }
     
