--- a/Organic_Launch/Organic_Launch/Views/Shared/_Layout.cshtml
+++ b/Organic_Launch/Organic_Launch/Views/Shared/_Layout.cshtml
@@ -17,10 +17,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Organic Launch", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">About Us</a></li>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li><span>Welcome @Html.Raw(User.Identity.Name)</span></li>
+                        <li><a href="#">Log Out</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#">Register</a></li>
+                    }
                 </ul>
             </div>
         </div>
@@ -29,7 +40,14 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="col-lg-12" style="text-align:center;">
+            
+            <ul style="list-style:none;">
+                <li style="display:inline;">@Html.ActionLink("Organic Launch", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
+                <li style="display:inline;"><a href="#">Terms and Condition</a></li>
+                <li style="display:inline;"><a href="#">About Us</a></li>
+                <li style="display:inline;"><a href="#">Privacy</a></li>
+            </ul>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
