connecting to db

--- a/Organic_Launch/Organic_Launch/Views/Home/IndexSecurity.cshtml
+++ b/Organic_Launch/Organic_Launch/Views/Home/IndexSecurity.cshtml
@@ -1,26 +1,19 @@
 ﻿@model WebApplication1.ViewModels.Login
 
 @{
-    Layout = null;
+    ViewBag.Title = "IndexSecurity";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-    
-    
-    @using (Html.BeginForm()) 
+<div class="col-sm-6">
+    <h2>IndexSecurity</h2>
+</div>
+
+<div class="col-sm-6">
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
+
         <div class="form-horizontal">
             <h4>Login</h4>
             <hr />
@@ -32,7 +25,7 @@
                     @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -40,17 +33,21 @@
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Log In" class="btn btn-default" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    @Html.ActionLink("Forgot your password?", "Index")
                 </div>
             </div>
         </div>
     }
-    
-    <div>
-        @Html.ActionLink("Back to List", "IndexSecurity")
-    </div>
-</body>
-</html>
+</div>
+
+
+
