--- a/Organic_Launch/Organic_Launch/Views/Shared/_Layout.cshtml
+++ b/Organic_Launch/Organic_Launch/Views/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
                     }
                     else
                     {
-                        <li><a href="#">Log In</a></li>
-                        <li><a href="#">Register</a></li>
+                        <li>@Html.ActionLink("Log In", "IndexSecurity", "Home")</li>
+                        <li>@Html.ActionLink("Register", "Register", "Home")</li>
                     }
                 </ul>
             </div>
