--- a/Organic_Launch/Organic_Launch/Views/Farm/List.cshtml
+++ b/Organic_Launch/Organic_Launch/Views/Farm/List.cshtml
@@ -5,6 +5,10 @@
 }
 
 
+
+@Html.Partial("_SideBar")
+
+<div class="col-sm-8">
     <h2>Farmer's Page</h2>
     @foreach (var item in Model)
     {
@@ -22,7 +26,7 @@
 
         </div>
     }
-
+</div>
 
 
 
