--- a/Organic_Launch/Organic_Launch/Views/Farm/List.cshtml
+++ b/Organic_Launch/Organic_Launch/Views/Farm/List.cshtml
@@ -23,7 +23,9 @@
                 <li>@Html.DisplayFor(modelItem => item.productCategory)</li>
                 <li>@Html.DisplayFor(modelItem => item.productDescription)</li>
             </ul>
-
+            <div>
+                <a href="@Url.Action("Edit", "Farm", new { id = item.productID})" id="@item.productID">Edit</a>
+            </div>
         </div>
     }
 </div>
